--- a/src/main.css
+++ b/src/main.css
@@ -2,3 +2,12 @@ body {
   width: 602px;
   height: 372px;
 }
+
+.nav-tabs .nav-item {
+  color: #495057;
+  opacity: 0.7;
+}
+
+.nav-tabs .nav-item.active {
+  opacity: 1;
+}
