--- a/src/components/list/list.module.css
+++ b/src/components/list/list.module.css
@@ -1,11 +1,26 @@
 .item {
   position: relative;
   overflow: visible !important;
+  cursor: pointer;
+  opacity: 0.7;
+  transition: opacity 0.2s;
+}
+
+.item:hover {
+  opacity: 1;
 }
 
 .actions {
   position: absolute;
-  right: 20px;
+  right: 47px;
   top: 8px;
   z-index: 100;
+}
+
+.delete {
+  color: #c82333;
+  position: absolute;
+  right: 1px;
+  font-size: 20px;
+  top: 1px;
 }
