--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -1,3 +1,13 @@
+.login {
+  padding-top: 50px;
+  text-align: center;
+}
+
+.button {
+  margin-top: 25px;
+  min-width: 160px;
+}
+
 .loader {
   text-align: center;
   opacity: 0.7;
@@ -13,10 +23,6 @@
   animation: pulsate 3s ease-out;
   animation-iteration-count: infinite;
   opacity: 0;
-}
-
-.input {
-  margin-top: -1px;
 }
 
 @keyframes pulsate {
