Added classnames, added fixme comments, added experiment details, minor UX changes

--- a/src/components/list/list.module.css
+++ b/src/components/list/list.module.css
@@ -36,3 +36,12 @@
 .actions button {
   width: 60px;
 }
+
+.experimentCard {
+  padding: 1px;
+  cursor: default;
+}
+
+.pointsOfContact {
+  padding-top: 10px;
+}
