Avoid loading experiments several times at the same time; added unlimited storage permission; removed console.log; implemented empty state; global state login

--- a/src/components/list/list.module.css
+++ b/src/components/list/list.module.css
@@ -45,3 +45,16 @@
 .pointsOfContact {
   padding-top: 10px;
 }
+
+.emptyItem {
+  padding-top: 30px;
+  text-align: center;
+}
+
+.loading {
+  margin-bottom: 30px;
+}
+
+.login {
+  margin-bottom: 30px;
+}
