--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,16 @@
+@keyframes redraw {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.99;
+  }
+}
+
+html {
+  animation: redraw 1s linear infinite;
+}
+
 body {
   width: 602px;
   height: 372px;
